<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.jimmy.seedersapp.TitleFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_title" />
    <fragment
        android:id="@+id/testerFragment"
        android:name="com.jimmy.seedersapp.TesterFragment"
        android:label="@string/dm_health_checker"
        tools:layout="@layout/fragment_tester" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.jimmy.seedersapp.AboutFragment"
        android:label="@string/about_seeders"
        tools:layout="@layout/fragment_about" />
</navigation>